商品 - 运费模板

--- a/application/admin/view/layout/head.html
+++ b/application/admin/view/layout/head.html
@@ -71,4 +71,9 @@
         background: blue;
         color: #fff;
     }
+    .freight_area_select{
+        color:blue;
+        font-weight: normal;
+    }
+
 </style>
