--- a/application/admin/view/layout/head.html
+++ b/application/admin/view/layout/head.html
@@ -67,7 +67,7 @@
         cursor:pointer;
     }
 
-    .active span{
+    .pagination .active span{
         background: blue;
         color: #fff;
     }
