--- a/application/admin/view/goods/category.html
+++ b/application/admin/view/goods/category.html
@@ -4,13 +4,13 @@
 
 <body>
 	<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 商城管理 <span
-			class="c-gray en">&gt;</span> 运费模板列表 <a class="btn btn-success radius r replace"
+			class="c-gray en">&gt;</span> 商品分类列表 <a class="btn btn-success radius r replace"
 			style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新"><i
 				class="Hui-iconfont">&#xe68f;</i></a></nav>
 	<div class="page-container">
 		<form method="GET" action="">
-		<div class="text-c"> 运费模板名称：
-			<input type="text" class="input-text" style="width:250px" placeholder="输入运费模板名称" value="{$keywords}" name="keywords">
+		<div class="text-c"> 商品分类名称：
+			<input type="text" class="input-text" style="width:250px" placeholder="输入商品分类名称" value="{$keywords}" name="keywords">
 			<button type="submit" class="btn btn-success" id="" name="">
 				<i class="Hui-iconfont">&#xe665;</i>
 				搜索</button>
@@ -18,21 +18,21 @@
 		</form>
 		<div class="cl pd-5 bg-1 bk-gray mt-20">
 			<span class="l">
-                 <a href="javascript:;" onclick="freight_add('添加运费模板','{:url('admin/goods/add_freight')}','1200','700')" class="btn btn-primary radius">
+                 <a href="javascript:;" onclick="category_add('添加商品分类','{:url('admin/goods/add_category')}','800','600')" class="btn btn-primary radius">
                     <i class="Hui-iconfont">&#xe600;</i> 
-                    添加运费模板
+                    添加商品分类
                 </a>
             </span> 
             <span class="r">共有数据：<strong>{$count}</strong> 条</span> </div>
 		<table class="table table-border table-bordered table-bg">
 			<thead>
 				<tr>
-					<th scope="col" colspan="9">运费模板列表</th>
+					<th scope="col" colspan="9">商品分类列表</th>
 				</tr>
 				<tr class="text-c">
                     <th width="40">ID</th>
-                    <th width="150">模板名称</th>
-					<th width="150">描述</th>
+                    <th width="150">分类名称</th>
+					<th width="150">上级分类</th>
 					<th width="130">更新时间</th>
 					<th width="100">操作</th>
                 </tr>
@@ -43,14 +43,14 @@
                 <tr class="text-c">
                     <td>{$vo.id}</td>
                     <td>{$vo.name}</td>
-                    <td>{$vo.desc}</td>
+                    <td>{$vo.parent_id}</td>
                     <td>{$vo.time|date="Y-m-d H:i:s",###}</td>
                     <td class="td-manage" data-id="{$vo.id}">
-                        <a title="编辑" href="javascript:;" onclick="freight_edit('运费模板编辑','/admin/goods/add_freight?freight_id={$vo.id}','','800','500')"
+                        <a title="编辑" href="javascript:;" onclick="category_edit('商品分类编辑','/admin/goods/add_category?category_id={$vo.id}','','800','500')"
                             class="ml-5" style="text-decoration:none">
                         	<i class="Hui-iconfont">&#xe6df;</i>
                         </a>
-                        <a title="删除" href="javascript:;" onclick="freight_del(this,'{$vo.id}')" class="ml-5"
+                        <a title="删除" href="javascript:;" onclick="category_del(this,'{$vo.id}')" class="ml-5"
                             style="text-decoration:none">
                             <i class="Hui-iconfont">&#xe6e2;</i>
                         </a>
@@ -80,14 +80,14 @@
 			w		弹出层宽度（缺省调默认值）
 			h		弹出层高度（缺省调默认值）
 		*/
-		/*运费模板-增加*/
-		function freight_add(title, url, w, h) {
+		/*商品分类-增加*/
+		function category_add(title, url, w, h) {
 			layer_show(title, url, w, h);
 		}
-		/*运费模板-删除*/
-		function freight_del(obj, id) {
+		/*商品分类-删除*/
+		function category_del(obj, id) {
 			layer.confirm('确认要删除吗？', function (index) {
-				$.post('/admin/goods/del_freight',{freight_id:id},function(res){
+				$.post('/admin/goods/del_category',{category_id:id},function(res){
 					if(res.status == 1){
 						layer.msg('操作成功', { icon: 6, time: 1000 });
 						window.location.replace(location.href);
@@ -98,8 +98,8 @@
 			});
 		}
 
-		/*运费模板-编辑*/
-		function freight_edit(title, url, id, w, h) {
+		/*商品分类-编辑*/
+		function category_edit(title, url, id, w, h) {
 			layer_show(title, url, w, h);
 		}
 	</script>
