--- a/application/admin/view/goods/index.html
+++ b/application/admin/view/goods/index.html
@@ -19,7 +19,7 @@
 		<div class="cl pd-5 bg-1 bk-gray mt-20">
 			<span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i
 						class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a href="javascript:;"
-					onclick="goods_add('添加商品','{:url('admin/system/add_goods')}','800','500')"
+					onclick="goods_add('添加商品','{:url('admin/goods/add_goods')}','1366','800')"
 					class="btn btn-primary radius"><i class="Hui-iconfont">&#xe600;</i> 添加商品</a></span> <span
 				class="r">共有数据：<strong>{$count}</strong> 条</span> </div>
 		<table class="table table-border table-bordered table-bg">
