后台用户管理修改

--- a/application/admin/view/member/edit.html
+++ b/application/admin/view/member/edit.html
@@ -67,11 +67,11 @@
 			<div class="formControls col-xs-8 col-sm-9 skin-minimal">
 				<div class="radio-box">
 					<input type="radio" name="status" id="status-1" value="1">
-					<label for="status-1">启用</label>
+					<label for="status-1">正常</label>
 				</div>
 				<div class="radio-box">
 					<input type="radio" name="status" id="status-2" value="0">
-					<label for="status-2">停用</label>
+					<label for="status-2">黑名单</label>
 				</div>
 			</div>
 		</div>
