--- a/application/admin/view/member/index.html
+++ b/application/admin/view/member/index.html
@@ -39,7 +39,6 @@
                         <th width="120">余额</th>
                         <th width="60">分销商</th>
                         <th width="70">分销等级</th>
-                        <th width="150">上级</th>
                         <th width="110">注册时间</th>
                         <th width="70">状态</th>
                         <th width="100">操作</th>
@@ -51,27 +50,26 @@
                             <td><input type="checkbox" value="{$vo.id}" name="user_id"></td>
                             <td>{$vo.id}</td>
                             <td><u style="cursor:pointer" class="text-primary"
-                                    onclick="member_show('{$vo.nickname}','/admin/member/show?id={$vo.id}','10001','400','600')">{$vo.nickname}</u></td>
+                                    onclick="member_show('{$vo.nickname}','/admin/member/show?id={$vo.id}','10001','550','750')" title="用户详情">{$vo.nickname}</u></td>
                             <td>{$vo.mobile}</td>
                             <td>{$vo.email}</td>
                             <td>{$vo.group_id|group_name}</td>
                             <td>{$vo.money}</td>
                             <td>{if condition="$vo.is_distributor == 1"}是{else/}否{/if}</td>
                             <td>{$vo.distributor_level}</td>
-                            <td>{$vo.id|first_leader}</td>
                             <td>{$vo.register_time|date="Y-m-d",###}</td>
                             <td class="td-status">
                                 {if condition="$vo.status == 1"}
-                                    <span class="label label-success radius">已启用</span>
+                                    <span class="label label-success radius">正常</span>
                                 {else/}
-                                    <span class="label label-defaunt radius">已停用</span>
+                                    <span class="label label-defaunt radius">已加入黑名单</span>
                                 {/if}
                             </td>
                             <td class="td-manage">
                                 {if condition="$vo.status == 1"}
-                                    <a style="text-decoration:none" onClick="member_stop(this,'{$vo.id}')" href="javascript:;" title="停用"><i class="Hui-iconfont">&#xe6e1;</i></a>
+                                    <a style="text-decoration:none" onClick="member_stop(this,'{$vo.id}')" href="javascript:;" title="加入黑名单"><i class="Hui-iconfont">&#xe6e1;</i></a>
                                 {else/}
-                                    <a style="text-decoration:none" onClick="member_start(this,'{$vo.id}')" href="javascript:;" title="启用"><i class="Hui-iconfont">&#xe631;</i></a>
+                                    <a style="text-decoration:none" onClick="member_start(this,'{$vo.id}')" href="javascript:;" title="解除黑名单"><i class="Hui-iconfont">&#xe631;</i></a>
                                 {/if}
                                 <a title="编辑"
                                     href="javascript:;" onclick="member_edit('编辑用户','/admin/member/edit?id={$vo.id}','4','','510')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a>
@@ -108,7 +106,7 @@
         }
         /*用户-停用*/
         function member_stop(obj, user_id) {
-            layer.confirm('确认要停用吗？', function (index) {
+            layer.confirm('确认要加入黑名单吗？', function (index) {
                 $.ajax({
                     type: 'POST',
                     url: url,
@@ -116,11 +114,11 @@
                     data: {'id':user_id,'act':"status",'status':0},
                     success: function (data) {
                         if (data.code == 1) {
-                            layer.msg('已停用!', { icon: 5, time: 1000 },function(){
+                            layer.msg('已加入黑名单!', { icon: 5, time: 1000 },function(){
                                 window.location.reload();
                             });
                         } else {
-                            layer.msg('停用失败!', {icon: 2, time: 1000 });
+                            layer.msg('加入黑名单失败!', {icon: 2, time: 1000 });
                         }
                     },
                     error: function (data) {
@@ -132,7 +130,7 @@
 
         /*用户-启用*/
         function member_start(obj, user_id) {
-            layer.confirm('确认要启用吗？', function (index) {
+            layer.confirm('确认要解除黑名单吗？', function (index) {
                 $.ajax({
                     type: 'POST',
                     url: url,
@@ -140,11 +138,11 @@
                     data: {'id':user_id,'act':"status",'status':1},
                     success: function (data) {
                         if (data.code == 1) {
-                            layer.msg('已启用!', { icon: 6, time: 1000 },function(){
+                            layer.msg('已解除黑名单!', { icon: 6, time: 1000 },function(){
                                 window.location.reload();
                             });
                         } else {
-                            layer.msg('启用失败!',{ icon: 2, time: 1000 })
+                            layer.msg('解除黑名单失败!',{ icon: 2, time: 1000 })
                         }
                         
                     },
