--- a/application/admin/view/admin/list1.html
+++ b/application/admin/view/admin/list1.html
@@ -53,7 +53,7 @@
 
 				{volist name="list" id="vo"}
 					<tr class="text-c">
-						<td><input type="checkbox" value="1" name=""></td>
+						<td><input type="checkbox" value="{$vo.id}" name="admin_id"></td>
 						<td>{$vo.id}</td>
 						<td>{$vo.name}</td>
 						<!-- <td>13000000000</td>
@@ -61,11 +61,31 @@
 						<td>{$vo.g_name}</td>
 						<td>{:date('Y-m-d,H:s:i',$vo.addtime)}</td>
 						
-						<td class="td-status"><span class="label label-success radius">已启用</span></td>
+						<td class="td-status">
+						{if condition="$vo.is_lock == 1"}
+						<span class="label label-defaunt radius">已停用</span>
+						
+						{else/}
+						<span class="label label-success radius">已启用</span>
+						{/if}
+						</td>
+						
 						<td class="td-manage">
-							<a style="text-decoration:none" onClick="admin_stop(this,{$vo['id']})" href="javascript:;" title="停用">
+
+							{if condition="$vo.is_lock == 1"}
+							<a style="text-decoration:none" onClick="admin_start(this,'{$vo.id}')" href="javascript:;" title="启用"><i
+									class="Hui-iconfont">&#xe631;</i></a>
+
+							{else/}
+							<a style="text-decoration:none" onClick="admin_stop(this,'{$vo.id}')" href="javascript:;" title="停用"><i
+									class="Hui-iconfont">&#xe6e1;</i></a>
+							{/if}
+
+							<!-- <a style="text-decoration:none" onClick="admin_stop(this,{$vo['id']})" href="javascript:;" title="停用">
 								<i class="Hui-iconfont">&#xe631;</i>
-							</a>
+							</a> -->
+
+
 							<a title="编辑" href="javascript:;" onclick="admin_edit('管理员编辑','{:url('Admin/edit',array('id'=>$vo['id']))}','1','800','500')" class="ml-5"
 								style="text-decoration:none">
 								<i class="Hui-iconfont">&#xe6df;</i>
@@ -77,12 +97,9 @@
 						</td>
 					</tr>
 				{/volist}
-
-
-
-
 			</tbody>
 		</table>
+		<div class="pages">{$list->render()}</div>
 	</div>
 	<!--_footer 作为公共模版分离出去-->
 	{include file='layout/footer' /}
@@ -110,7 +127,7 @@
 				$.ajax({
 					type: 'POST',
 					url: "{:url('admin/admin/del')}",
-					data:{'id':id},
+					data:{'id':id,'act':'del'},
 					dataType: 'json',
 					success: function (data) {
 						if(data.status == 1){
@@ -138,22 +155,22 @@
 				//此处请求后台程序，下方是成功后的前台处理……
 				$.ajax({
 					type: 'POST',
-					url: "{:url('admin/admin/is_stop')}",
-					data: { 'id': id },
+					url: "{:url('admin/admin/is_handle')}",
+					data: {'id': id,'status':'stop'},
 					dataType: 'json',
 					success: function (data) {
+						console.log(data);
 						if (data.status == 1) {
-							$(obj).parents("tr").find(".td-manage").prepend('<a onClick="admin_start(this,id)" href="javascript:;" title="启用" style="text-decoration:none"><i class="Hui-iconfont">&#xe615;</i></a>');
-							$(obj).parents("tr").find(".td-status").html('<span class="label label-default radius">已禁用</span>');
-							$(obj).remove();
-							layer.msg('已停用!', { icon: 5, time: 1000 });
+							layer.msg('已停用!', { icon: 5, time: 1000 }, function () {
+								window.location.reload();
+							});
 						} else {
 							layer.msg('操作失败!', { icon: 2, time: 1000 });
 						}
 
 					},
 					error: function (data) {
-						console.log(data.msg);
+						 layer.alert("服务器繁忙, 请联系管理员!");
 					},
 				});                
 
@@ -164,14 +181,66 @@
 		function admin_start(obj, id) {
 			layer.confirm('确认要启用吗？', function (index) {
 				//此处请求后台程序，下方是成功后的前台处理……
+				$.ajax({
+					type: 'POST',
+					url: "{:url('admin/admin/is_handle')}",
+					data: {'id': id,'status':'start'},
+					dataType: 'json',
+					success: function (data) {
+						console.log(data);
+						if (data.status == 1) {
+							layer.msg('已启用!', { icon: 6, time: 1000 }, function () {
+								window.location.reload();
+							});
+						} else {
+							layer.msg('操作失败!', { icon: 2, time: 1000 });
+						}
 
-
-				$(obj).parents("tr").find(".td-manage").prepend('<a onClick="admin_stop(this,id)" href="javascript:;" title="停用" style="text-decoration:none"><i class="Hui-iconfont">&#xe631;</i></a>');
-				$(obj).parents("tr").find(".td-status").html('<span class="label label-success radius">已启用</span>');
-				$(obj).remove();
-				layer.msg('已启用!', { icon: 6, time: 1000 });
+					},
+					error: function (data) {
+						layer.alert("服务器繁忙, 请联系管理员!");
+					},
+				}); 
 			});
 		}
+
+        /* 多用户删除 */
+        function datadel(){
+            id = document.getElementsByName("admin_id");
+            check_val = [];
+            for(k in id){
+                if(id[k].checked){
+                    check_val.push(id[k].value);
+                }
+            }
+            console.log(check_val);
+            if (check_val.length == 0) {
+                layer.alert("你还没有选择!");
+            } else {
+                check_val = JSON.stringify(check_val);
+                layer.confirm('确认要删除吗？', function (index) {
+                    $.ajax({
+                        type: 'POST',
+                        url: "{:url('admin/admin/del')}",
+                        data: {'id':check_val,'act':"batchdel"},
+                        dataType: 'json',
+                        success: function (data) {
+                            if (data.status == 1) {
+                                layer.msg(data.msg, { icon: 1, time: 1000 },function(){
+                                    window.location.reload();
+                                });
+                            } else {
+                                layer.msg(data.msg, { icon: 2, time: 1000 });
+                            }
+                        },
+                        error: function () {
+                            layer.alert("服务器繁忙, 请联系管理员!");
+                        },
+                    });
+                });
+            }
+        }
+
 	</script>
 </body>
 
