--- a/application/admin/view/member/index.html
+++ b/application/admin/view/member/index.html
@@ -24,7 +24,7 @@
                 <a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a>
                 <a href="javascript:;" onclick="member_add('添加用户','add.html','','510')" class="btn btn-primary radius"><i class="Hui-iconfont">&#xe600;</i> 添加用户</a>
             </span>
-            <span class="r">共有数据：<strong>{$list->total()}</strong>条</span>
+            <span class="r">共有数据：<strong>{$list->total()}</strong> 条</span>
         </div>
         <div class="mt-20">
             <table class="table table-border table-bordered table-hover table-bg table-sort">
@@ -62,7 +62,7 @@
                                 {if condition="$vo.status == 1"}
                                     <span class="label label-success radius">正常</span>
                                 {else/}
-                                    <span class="label label-defaunt radius">已加入黑名单</span>
+                                    <span class="label label-defaunt radius">黑名单</span>
                                 {/if}
                             </td>
                             <td class="td-manage">
