--- a/application/admin/view/goods/category.html
+++ b/application/admin/view/goods/category.html
@@ -33,6 +33,7 @@
                     <th width="40">ID</th>
                     <th width="150">分类名称</th>
 					<th width="150">上级分类</th>
+					<th width="150">状态</th>
 					<th width="130">更新时间</th>
 					<th width="100">操作</th>
                 </tr>
@@ -43,8 +44,15 @@
                 <tr class="text-c">
                     <td>{$vo.id}</td>
                     <td>{$vo.name}</td>
-                    <td>{$vo.parent_id}</td>
-                    <td>{$vo.time|date="Y-m-d H:i:s",###}</td>
+					<td>{if condition="isset($pname[$vo.parent_id])"}{$pname[$vo.parent_id]}{else}{$vo.parent_id}{/if}</td>
+					<td class="td-status">
+						{if condition="$vo.is_lock eq 0"}
+						<span class="label label-success radius">正常</span>
+						{else /}
+						<span class="label label-default radius">锁定</span>
+						{/if}
+					</td>
+					<td>{$vo.time|date="Y-m-d H:i:s",###}</td>
                     <td class="td-manage" data-id="{$vo.id}">
                         <a title="编辑" href="javascript:;" onclick="category_edit('商品分类编辑','/admin/goods/add_category?category_id={$vo.id}','','800','500')"
                             class="ml-5" style="text-decoration:none">
@@ -69,7 +77,6 @@
 	{include file='layout/footer' /}
 
 	<!--请在下方写此页面业务相关的脚本-->
-	<script type="text/javascript" src="/__STATIC__/lib/My97DatePicker/4.8/WdatePicker.js"></script>
 	<script type="text/javascript" src="/__STATIC__/lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
 	<script type="text/javascript">
 		/*
@@ -100,7 +107,7 @@
 
 		/*商品分类-编辑*/
 		function category_edit(title, url, id, w, h) {
-			layer_show(title, url, w, h);
+			layer_show(title, url, w, h,1);
 		}
 	</script>
 </body>
