--- a/application/admin/view/admin/list1.html
+++ b/application/admin/view/admin/list1.html
@@ -8,14 +8,23 @@
 			style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新"><i
 				class="Hui-iconfont">&#xe68f;</i></a></nav>
 	<div class="page-container">
-		<div class="text-c"> 日期范围：
-			<input type="text" onfocus="WdatePicker()" id="datemin" class="input-text Wdate" style="width:120px;">
-			-
-			<input type="text" onfocus="WdatePicker()" id="datemax" class="input-text Wdate" style="width:120px;">
-			<input type="text" class="input-text" style="width:250px" placeholder="输入管理员名称" id="" name="keywords">
-			<button type="submit" class="btn btn-success" id="" name=""><i class="Hui-iconfont">&#xe665;</i>
-				搜用户</button>
-		</div>
+		<form method="GET" action="">
+			<div class="text-c"> 日期范围：
+				<input type="text" onfocus="WdatePicker()" id="datemin" name="seach[datemin]"
+					value="{if condition='isset($seach.datemin)'}{$seach.datemin}{/if}" class="input-text Wdate"
+					style="width:120px;">
+				-
+				<input type="text" onfocus="WdatePicker()" id="datemax" name="seach[datemax]"
+					value="{if condition='isset($seach.datemax)'}{$seach.datemax}{/if}" class="input-text Wdate"
+					style="width:120px;">
+				<input type="text" class="input-text" style="width:250px"
+					value="{if condition='isset($seach.m_conditions)'}{$seach.m_conditions}{/if}" placeholder="输入管理员名称、角色"
+					id="m_conditions" name="seach[m_conditions]">
+				<button type="submit" class="btn btn-success radius" id="m_search" name=""><i class="Hui-iconfont">&#xe665;</i>
+					搜用户</button>
+			</div>
+		
+		</form>
 		<div class="cl pd-5 bg-1 bk-gray mt-20">
 			<span class="l">
 				<a href="javascript:;" onclick="datadel()" class="btn btn-danger radius">
@@ -26,12 +35,12 @@
 					<i class="Hui-iconfont">&#xe600;</i> 
 					添加管理员
 				</a>
-				<a href="{:url('admin/admin/role')}" class="btn btn-default ">
+				<a href="{:url('admin/role/role')}" class="btn btn-default ">
 					<i class="Hui-iconfont">&#xe62c;</i> 
 					角色管理
 				</a>
 			</span> 
-			<span class="r">共有数据：<strong>54</strong> 条</span> </div>
+			<span class="r">共有数据：<strong></strong> 条</span> </div>
 		<table class="table table-border table-bordered table-bg">
 			<thead>
 				<tr>
