--- a/application/admin/view/role/role.html
+++ b/application/admin/view/role/role.html
@@ -10,14 +10,14 @@
 				<i class="Hui-iconfont">&#xe6e2;</i> 
 				批量删除
 			</a> 
-			<a class="btn btn-primary radius" href="javascript:;" onclick="admin_role_add('添加角色','{:url('admin/admin/role_add')}','800')">
+			<a class="btn btn-primary radius" href="javascript:;" onclick="admin_role_add('添加角色','{:url('admin/role/role_add')}','800')">
 				<i class="Hui-iconfont">&#xe600;</i>
-			 添加角色
+			 	添加角色
 			</a> 
-			<a href="{:url('admin/admin/permission')}" class="btn btn-default ">
+			<!-- <a href="{:url('admin/admin/permission')}" class="btn btn-default ">
 				<i class="Hui-iconfont">&#xe68b;</i> 
 				权限管理
-			</a>
+			</a> -->
 		</span> 
 		<span class="r">共有数据：<strong>54</strong> 条</span> </div>
 	<table class="table table-border table-bordered table-hover table-bg">
@@ -30,7 +30,7 @@
 				<th width="40">ID</th>
 				<th width="200">角色名</th>
 				<th>用户列表</th>
-				<th width="300">描述</th>
+				<!-- <th width="300">描述</th> -->
 				<th width="70">操作</th>
 			</tr>
 		</thead>
@@ -40,7 +40,7 @@
 				<td>1</td>
 				<td>超级管理员</td>
 				<td><a href="#">admin</a></td>
-				<td>拥有至高无上的权利</td>
+				<!-- <td>拥有至高无上的权利</td> -->
 				<td class="f-14"><a title="编辑" href="javascript:;" onclick="admin_role_edit('角色编辑','admin-role-add.html','1')" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a> <a title="删除" href="javascript:;" onclick="admin_role_del(this,'1')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 			</tr>
 			<tr class="text-c">
@@ -48,7 +48,7 @@
 				<td>2</td>
 				<td>总编</td>
 				<td><a href="#">张三</a></td>
-				<td>具有添加、审核、发布、删除内容的权限</td>
+				<!-- <td>具有添加、审核、发布、删除内容的权限</td> -->
 				<td class="f-14"><a title="编辑" href="javascript:;" onclick="admin_role_edit('角色编辑','admin-role-add.html','2')" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a> <a title="删除" href="javascript:;" onclick="admin_role_del(this,'1')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 			</tr>
 			<tr class="text-c">
@@ -56,7 +56,7 @@
 				<td>3</td>
 				<td>栏目主辑</td>
 				<td><a href="#">李四</a>，<a href="#">王五</a></td>
-				<td>只对所在栏目具有添加、审核、发布、删除内容的权限</td>
+				<!-- <td>只对所在栏目具有添加、审核、发布、删除内容的权限</td> -->
 				<td class="f-14"><a title="编辑" href="javascript:;" onclick="admin_role_edit('角色编辑','admin-role-add.html','3')" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a> <a title="删除" href="javascript:;" onclick="admin_role_del(this,'1')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 			</tr>
 			<tr class="text-c">
@@ -64,7 +64,7 @@
 				<td>4</td>
 				<td>栏目编辑</td>
 				<td><a href="#">赵六</a>，<a href="#">钱七</a></td>
-				<td>只对所在栏目具有添加、删除草稿等权利。</td>
+				<!-- <td>只对所在栏目具有添加、删除草稿等权利。</td> -->
 				<td class="f-14"><a title="编辑" href="javascript:;" onclick="admin_role_edit('角色编辑','admin-role-add.html','4')" style="text-decoration:none"><i class="Hui-iconfont">&#xe6df;</i></a> <a title="删除" href="javascript:;" onclick="admin_role_del(this,'1')" class="ml-5" style="text-decoration:none"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
 			</tr>
 		</tbody>
