--- a/application/admin/view/role/role_add.html
+++ b/application/admin/view/role/role_add.html
@@ -37,8 +37,8 @@
 							<dt>
 								{foreach $vo['chidren'] as $v}
 								<label class="">
-									<input type="checkbox" value="{$vo.id.','.$v.id}" name="user-Character-0-0" id="user-Character-0-0">
-									{$v.name,$vo.id.','.$v.id}
+									<input type="checkbox" value="{$v.id}" name="user-Character-0-0" id="user-Character-0-0">
+									{$v.name}
 								</label>
 								{/foreach}
 							</dt>
@@ -108,42 +108,21 @@ $(function(){
 				}
 			} 
 
-			console.log(check_val)
-			return false;
-			// var jurisdiction =  JSON.stringify(check_val)
-			for (var i = 0; i < check_val.length; i++) {
-				
-				arr = check_val[i].split(',');
-                  
-				for (var k = i+1; k < check_val.length; k++){
-					 arr1 = check_val[k].split(',');
-                     
-					 if(arr[0]== arr1[0]){
-						    // console.log(arr[0])
-                            var myarray  = new Array()
-							var myarray1 = new Array()
-							var num = arr[0]
-							// myarray1 = arr[1]
-						 	myarray1[i] = arr[1]
-							myarray1[i+1] = arr1[1]
-							myarray[num] = myarray1
-							
-					 } 
-				}
-			}
-			console.log(myarray)
-			return false
+			// console.log(check_val)
+			// return false;
+
             var roleName = $('#roleName').val()
 
 			$.ajax({
 				type: 'post',
 				url: "{:url('admin/role/handle')}",
-				data: {'name':roleName,'jurisdiction': jurisdiction,'act':'add'},
+				data: {'name':roleName,'jurisdiction': check_val,'act':'add'},
 
 				success: function (data) {
-
+                
 					if (data.status == 1) {
 						layer.msg(data.msg, { icon: 1, time: 1000 }, function () {
+							// window.location()
 							parent.location.reload()
 							// var index = parent.layer.getFrameIndex(window.name);
 							// parent.$('.btn-refresh').click();
