--- a/application/admin/view/admin/list1.html
+++ b/application/admin/view/admin/list1.html
@@ -40,11 +40,11 @@
 					角色管理
 				</a>
 			</span> 
-			<span class="r">共有数据：<strong></strong> 条</span> </div>
+			<span class="r">共有数据：<strong></strong> {$num}条</span> </div>
 		<table class="table table-border table-bordered table-bg">
 			<thead>
 				<tr>
-					<th scope="col" colspan="9">员工列表</th>
+					<th scope="col" colspan="9">管理员列表</th>
 				</tr>
 				<tr class="text-c">
 					<th width="25"><input type="checkbox" name="" value=""></th>
@@ -52,7 +52,7 @@
 					<th width="150">登录名</th>
 					<!-- <th width="90">手机</th>
 					<th width="150">邮箱</th> -->
-					<th>角色</th>
+					<th width="100">角色</th>
 					<th width="130">加入时间</th>
 					<th width="100">是否已启用</th>
 					<th width="100">操作</th>
