--- a/application/admin/view/role/role.html
+++ b/application/admin/view/role/role.html
@@ -24,7 +24,7 @@
 				权限管理
 			</a> -->
 			</span>
-			<span class="r">共有数据：<strong>54</strong> 条</span> </div>
+			<span class="r">共有数据：<strong>{$num}</strong> 条</span> </div>
 		<table class="table table-border table-bordered table-hover table-bg">
 			<thead>
 				<tr>
@@ -33,8 +33,8 @@
 				<tr class="text-c">
 					<th width="25"><input type="checkbox" value="" name=""></th>
 					<th width="40">ID</th>
-					<th width="200">角色名</th>
-					<th>用户列表</th>
+					<th width="100">角色名</th>
+					<th width="40">添加时间</th>
 					<!-- <th width="300">描述</th> -->
 					<th width="70">操作</th>
 				</tr>
@@ -45,10 +45,10 @@
 					<td><input type="checkbox" value="{$vo.id}" name="admin_id"></td>
 					<td>{$vo.id}</td>
 					<td>{$vo.name}</td>
-					<td><a href="#">admin,sdsd,asdasdasd</a></td>
+					<td width="40">{:date('Y-m-d,H:i:s',$vo.addtime)}</td>
 					<!-- <td>拥有至高无上的权利</td> -->
 					<td class="f-14"><a title="编辑" href="javascript:;"
-							onclick="admin_role_edit('角色编辑','admin-role-add.html',{$vo.id})" style="text-decoration:none"><i
+							onclick="admin_role_edit('角色编辑','{:url('admin/role/role_edit',array('id'=>$vo.id))}')" style="text-decoration:none"><i
 								class="Hui-iconfont">&#xe6df;</i></a> <a title="删除" href="javascript:;"
 							onclick="admin_role_del(this,{$vo.id})" class="ml-5" style="text-decoration:none"><i
 								class="Hui-iconfont">&#xe6e2;</i></a></td>
