--- a/application/admin/view/goods/add_goods.html
+++ b/application/admin/view/goods/add_goods.html
@@ -29,42 +29,63 @@
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>商品名称：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="商品名称" id="" name="name">
+				<input type="text" class="input-text" {if condition="isset($info)"}value="{$info.name}"{/if} placeholder="商品名称" id="" name="name">
 			</div>
 		</div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>商品分类：</label>
 			<div class="formControls col-xs-8 col-sm-9"> 
-                   <a ref="javascript:;" style="color:blue" id="goods_category" onclick="select_goods_category()">请选择分类</a>
+                <a ref="javascript:;" style="color:blue" id="goods_category" onclick="select_goods_category()">
+                    {if condition="isset($info)"}
+                        {$info.catename}
+                    {else /}
+                        请选择分类
+                    {/if}
+                </a>
             </div>
         </div>
         <div class="row cl">
             <label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>商品展示图：</label>
             <div class="formControls col-xs-8 col-sm-9" id="goods-image">
-                <a onclick="upload_image();" id="add-goods-image">
-                    <img src="/public/default_upload_images_add.jpg" alt="上传图片" />
-                </a>
+                {if condition="isset($info)"}
+                    {volist name="info.image" id="vo"}
+                        <a>
+                            <img class="ex-image" src="{$image_path.$vo}" />
+                            <input type="hidden" name="images[]" value="{$vo}">
+                            <i class="Hui-iconfont del-up-image" onclick="del_up_image(this)">&#xe6e2;</i>
+                        </a>
+                    {/volist}
+                    {if condition="count($info.image) lt 5"}
+                        <a onclick="upload_image();" id="add-goods-image">
+                            <img src="/public/default_upload_images_add.jpg" alt="上传图片" />
+                        </a>
+                    {/if}
+                {else /}
+                    <a onclick="upload_image();" id="add-goods-image">
+                        <img src="/public/default_upload_images_add.jpg" alt="上传图片" />
+                    </a>
+                {/if}
             </div>
         </div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">销售价：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="price" id="" placeholder="" value="" class="input-text" style="width:90%">
+				<input type="text" name="price" id="" placeholder="商品销售价" {if condition="isset($info)"} value="{$info.price}" {/if} class="input-text" style="width:90%">
 				元</div>
 		</div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">原价：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="self_price" id="" placeholder="" value="" class="input-text" style="width:90%">
+				<input type="text" name="self_price" id="" placeholder="商品原价" {if condition="isset($info)"} value="{$info.self_price}" {/if} class="input-text" style="width:90%">
 				元</div>
         </div>
         <div class="row cl">
             <label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>商品库存：</label>
             <div class="formControls col-xs-8 col-sm-9 skin-minimal">
-                <input type="text" name="stock" id="stock" placeholder="商品库存" value="0" class="input-text" style="width:150px;">
+                <input type="text" name="stock" id="stock" placeholder="商品库存" {if condition="isset($info)"} value="{$info.stock}" {else /}value="0" {/if} class="input-text" style="width:150px;">
                 &nbsp;&nbsp;&nbsp;&nbsp;
                 <div class="radio-box">
-                    <input type="checkbox" id="is_stock" value="0" name="is_stock" {if condition="isset($info) && $info.is_lock eq 1"}checked{/if}>
+                    <input type="checkbox" id="is_stock" value="0" name="is_stock" {if condition="isset($info) && $info.is_stock eq 0"}checked{/if}>
                     <label for="is_stock">无库存限制</label>
                 </div>
             </div>
@@ -132,7 +153,7 @@
         <div class="row cl">
             <label class="form-label col-xs-4 col-sm-2">促销价格：</label>
             <div class="formControls col-xs-8 col-sm-9">
-                <input type="text" name="promotion_price" id="" placeholder="商品促销价格" value="" class="input-text" style="width:180px">
+                <input type="text" name="promotion_price" id="" placeholder="商品促销价格" {if condition="isset($info)"} value="{$info.promotion_price}" {/if} class="input-text" style="width:180px">
                 元
                 <div class="radio-box">
                     <input type="checkbox" id="sex-2" value="1" name="promotion_to" {if condition="isset($info) && $info.promotion_to eq 1"}checked{/if}>
@@ -144,7 +165,7 @@
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">活动开始时间：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-                <input type="text" {literal} onfocus="WdatePicker({ dateFmt:'yyyy-MM-dd HH:mm:ss',maxDate:'#F{$dp.$D(\'datemax\')||\'%y-%M-%d\'}' })" {/literal} id="datemin" name="limit_stime" class="input-text Wdate" style="width:180px;">
+                <input type="text" {literal} onfocus="WdatePicker({ dateFmt:'yyyy-MM-dd HH:mm:ss',maxDate:'#F{$dp.$D(\'datemax\')||\'%y-%M-%d\'}' })" {/literal} {if condition="isset($info) && $info.limit_stime gt 0"} value="{$info.limit_stime|date='Y-m-d H:i:s',###}"{/if}  id="datemin" name="limit_stime" class="input-text Wdate" style="width:180px;">
                 <p style="font-size:12px;color:#b1b1b1;">商品类型为 “促销” 或 “限时” 时必填，其余类型无效。</p>
 			</div>
 		</div>
@@ -152,21 +173,21 @@
 			<label class="form-label col-xs-4 col-sm-2">活动结束时间：</label>
 			<div class="formControls col-xs-8 col-sm-9">
                 <input type="text" {literal} onfocus="WdatePicker({ dateFmt:'yyyy-MM-dd HH:mm:ss',minDate:'#F{$dp.$D(\'datemin\')}' })" 
-                {/literal} id="datemax" name="limit_etime" class="input-text Wdate" style="width:180px;">
+                {/literal} {if condition="isset($info) && $info.limit_etime gt 0"} value="{$info.limit_etime|date='Y-m-d H:i:s',###}"{/if} id="datemax" name="limit_etime" class="input-text Wdate" style="width:180px;">
                 <p style="font-size:12px;color:#b1b1b1;">商品类型为 “促销” 或 “限时” 时必填，其余类型无效。</p>
 			</div>
         </div>
         <div class="row cl">
             <label class="form-label col-xs-4 col-sm-2">运费：</label>
             <div class="formControls col-xs-8 col-sm-9">
-                <input type="text" name="freight" id="" placeholder="运费：" value="0" class="input-text" style="width:180px">
+                <input type="text" name="freight" id="" placeholder="运费：" {if condition="isset($info)"}value="{$info.freight}"{/if} class="input-text" style="width:180px">
                 元
                 <div class="radio-box">
                     <span class="select-box" style="width:230px;">
                         <select class="select" name="freight_temp" size="1">
                             <option value="0">--选择运费模板--</option>
                             {volist name="freight_temp" id="vo"}
-                            <option value="{$vo.id}" >{$vo.name}</option>
+                            <option value="{$vo.id}" {if condition="isset($info) && $info.freight_temp eq $vo.id"}selected{/if}>{$vo.name}</option>
                             {/volist}
                         </select>
                     </span>
@@ -177,7 +198,7 @@
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">详细内容：</label>
 			<div class="formControls col-xs-8 col-sm-9"> 
-				<script id="editor" type="text/plain" style="width:100%;height:400px;"></script> 
+				<script id="editor" type="text/plain" style="width:100%;height:400px;">{if condition="isset($info)"}{$info.details}{/if}</script> 
 			</div>
 		</div>
 		<div class="row cl">
@@ -207,7 +228,7 @@
         if(status == 1){
             layer.msg(msg,{icon:6});
             setTimeout(function(){
-                layer.close();
+                parent.open_closeAll();
             },1000);
         }else{
             error(msg);
