--- a/application/admin/view/admin/list1.html
+++ b/application/admin/view/admin/list1.html
@@ -60,7 +60,7 @@
 			</thead>
 			<tbody>
 
-				{volist name="list" id="vo"}
+				{volist name="zuhe" id="vo"}
 					<tr class="text-c">
 						<td><input type="checkbox" value="{$vo.id}" name="admin_id"></td>
 						<td>{$vo.id}</td>
